--- a/project.yml
+++ b/project.yml
@@ -1,5 +1,5 @@
-title: "NLP system"
-description: "Integrate everything we need in a nlp system"
+title: "深度学习系统"
+description: "整合所有我们需要的东西进入到系统"
 # Variables can be referenced across the project.yml using ${vars.var_name}
 vars:
   name: "ner_tender"
