--- a/project.yml
+++ b/project.yml
@@ -33,9 +33,9 @@ workflows:
   start:
     - install
     - serve
-  train-cats:
-    - convert-cats
-    - train-cats
+  train_cats:
+    - convert_cats
+    - train_cats
 
 # 项目命令
 commands:
@@ -52,7 +52,7 @@ commands:
       - "corpus/train.spacy"
       - "corpus/dev.spacy"
 
-    - name: "convert-cats"
+  - name: "convert_cats"
     help: "convert to cats data"
     script:
       - "python scripts/convert_cats.py ${vars.lang} assets/train_cats.json corpus/train_cats.spacy"
@@ -83,7 +83,7 @@ commands:
     outputs:
       - "training/model_best"
 
-  - name: "train-cats"
+  - name: "train_cats"
     help: "Train the cat model"
     script:
       - "python -m spacy train configs/config_cats.cfg --output training/ --paths.train corpus/train_cats.spacy --paths.dev corpus/dev_cats.spacy  --gpu-id ${vars.gpu_id}"
